# sorter-v2

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  REVIEW-2026-04-16.md  runtime-architecture.html
software/firmware/sorter_interface_firmware/uart_probe/: CMakeLists.txt  uart_probe.cpp
software/hive/backend/: .gitignore  alembic.ini  pyproject.toml  sorthive.db
software/hive/backend/alembic/: env.py
software/hive/backend/app/: config.py  database.py  deps.py  errors.py  machine_hardware.py  main.py  seed_admin.py
software/hive/backend/scripts/: backfill_phash.py  compute_part_geometry.py  export_training_raw.py  publish_link_model.py  purge_link_match_piece_images.py  sample_progress_check.py  test_perceptron.py
software/hive/backend/tests/: conftest.py  test_analytics.py  test_api_key_scopes.py  test_auth.py  test_color_predict.py  test_config_backups.py  test_config_security.py  test_control_data_admin.py  test_devices.py  test_image_quality_labels.py  test_leaderboard.py  test_machine_overview.py  test_machine_sync.py  test_model_download_filename.py  test_models.py  test_piece_metadata.py  test_piece_part_labels.py  test_profile_catalog_auto_sync.py  test_profile_catalog_part_search.py  test_public_stats.py  test_review.py  test_samples.py  test_server_health_cache.py  test_upload.py
software/scripts/servo_tester/: README.md  main.py  pyproject.toml  sorter_bus.py  test_stepper.py
software/sorter/backend/: DETECTOR_RUNTIME_STATUS.md  DEVICE_BENCHMARKING.md  HAILO_HEF_WORKFLOW.md  MODEL_ARTIFACTS.md  api_only.py  aruco_config_default.json  aruco_config_manager.py  basically_services.py  blob_manager.py  bsx_inventory.py  channel_crop_lookup.py  channel_crop_lookup_params.py  channel_crop_store.py  channel_geometry_payload.py  control_data_store.py  coordinator.py  global_config.py  hive_metadata.py  hive_telemetry.py  incident_records.py  lifetime_stats.py  link_matcher.py  local_metrics.py  local_state.py  local_state.sqlite.bak-20260422-003825  log_pruner.py  logger.py  machine_setup.py  machine_specs.py  main.py  migrate_json_records_to_sqlite.py  piece_image_store.py  piece_metadata_db.py  piece_records.py  piece_transport.py  probe_stepper_currents.py  process_guard.py  profiler.py  pruner.py  pyproject.toml  (+19 more)
software/sorter/backend/bricklink/: api.py
software/sorter/backend/classification/: auto_recognize.py  brickognize.py  brickognize_feedback.py  brickognize_types.py  providers.py
software/sorter/backend/defs/: channel.py  consts.py  events.py  known_object.py
software/sorter/backend/hardware/: bus.py  firmware_flash.py  macos_camera_modes.py  macos_camera_registry.py  macos_uvc_controls.py  serial_identity.py  sorter_interface.py  tmc2209_status.py  waveshare_bus_service.py  waveshare_servo.py
software/sorter/backend/irl/: __init__.py  bin_layout.py  chute.py  config.py  parse_user_toml.py  toml_migrations.py
software/sorter/backend/machine_platform/: control_board.py  machine_profile.py  servo_controller.py
software/sorter/backend/machine_runtime/: __init__.py  base.py  classification_channel.py  standard_carousel.py
software/sorter/backend/message_queue/: handler.py
software/sorter/backend/perception/: angular_tracker.py  arcs.py  capture.py  cascade.py  channel.py  channel_crop_capture.py  detection.py  inference.py  ordered_tracker.py  overlay.py  runtime.py  service.py  state.py  tracker_config.py  tracking.py  transition_capture.py  upstream_capture.py
software/sorter/backend/reports/: ab_pipeline_20260609-204814.json
software/sorter/backend/rt/: __init__.py  bootstrap.py  context.py
software/sorter/backend/scripts/: ab_compare_camera_pipelines.py  aruco_webcam_calibrate.py  benchmark_camera_transport.py  benchmark_tracker_replay.py  build_ffmpeg_rockchip.sh  c4_motion_sweep.py  c4_safe_motion_probe.py  c4_sector_probe.py  calibrate_classification_baseline.py  camera_format_probe.py  camera_setup.py  ch2_shake_test.py  channel_throughput_baseline.py  channel_throughput_report.py  dossier_link_audit.py  grab_camera_frame.py  hailo_shared_worker.py  jog_test.py  motor_calibrate.py  motor_test.py  polygon_editor.py  probe_camera_calibration_ring.py  probe_camera_handle_stability.py  probe_camera_transport_stack.py  probe_gstreamer_target_capture_pipeline.py  probe_librga_scale_crop.py  probe_rk3588_npu_stack.py  probe_webrtc_view_scaling.py  render_legacy_parallel_matrix_report.py  rev04_perf_smoketest.py  run_observer.py  sector_carousel_ladder_selftest.py  stepper_uart_order_test.py  wall_detector_capture.py  wall_detector_collect.py
software/sorter/backend/server/: api.py  camera_annotations.py  camera_calibration.py  camera_discovery.py  camera_preview_hub.py  classification_training.py  condition_collector.py  condition_teacher.py  config_backup.py  config_helpers.py  hive_models.py  hive_sync.py  hive_uploader.py  perf_history.py  sample_payloads.py  security.py  set_progress_sync.py  shared_state.py  sorter_lifecycle.py  wall_detector_teacher.py  waveshare_inventory.py
software/sorter/backend/subsystems/: sample_collection_speed.py  shared_variables.py
software/sorting_profile_builder/: .env.example  .gitignore  HOW_TO_EDIT_PROFILES_WITH_CLAUDE.md  Makefile  README.md  ai_chat.py  bricklink_api.py  brickstore_db.py  db.py  extract_brickstore_key.py  global_config.py  main.py  migrate_json.py  parts_cache.py  pyproject.toml  rule_engine.py  server.py  sorting_profile.py
software/sorting_profile_builder/migrations/: 001_initial_schema.sql  002_add_price_guide.sql  003_structured_price_guide.sql  004_ai_chat.sql  005_ai_chat_tool_calls.sql
software/sorting_profile_builder/templates/: _rule_card.html  base.html  index.html  profile.html
software/training/: .gitignore  README.md  RUNBOOK.md  pyproject.toml
software/training/docker/: Dockerfile.trainer  README.md  build.sh
software/training/rknn_builder/: Dockerfile  README.md  build.py  build.sh
software/training/scripts/: benchmark_v6_local.py  build_hive_model_report.py  compose_v6_metadata.py  eval_bronze_vs_accepted.py  yolo_to_coco.py
(+1913 files in other folders)
