[project]
name = "sorting-profile-builder"
version = "0.1.0"
description = "Standalone webapp for building LEGO sorting profiles"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.3",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
]
