[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Pinned to 3.12 because `rknn-toolkit-lite2` (RK3588 NPU inference, used on
# the Orange Pi) only ships prebuilt wheels for cp37-cp312. No cp313 wheel
# exists upstream and the package wraps a closed-source binary, so we can't
# rebuild it ourselves. Bump only when rknn-toolkit-lite2 publishes a
# matching cp313+ wheel.
requires-python = ">=3.12,<3.13"
dependencies = [
    "boxmot>=18.0.0",
    "cryptography>=42",
    "cv2-enumerate-cameras>=1.3.3",
    "fastapi>=0.128.3",
    "flask>=3.1.3",
    "lap>=0.5.12",
    "ncnn>=1.0.20260114",
    "numpy>=2.4.2",
    "onnxruntime>=1.23.2",
    "openai>=2.30.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "pydantic-to-typescript>=2.0.0",
    "pyright>=1.1.408",
    # HW JPEG decode (vision/gst_capture.py -> GStreamer mppjpegdec) on the
    # Orange Pi 5 only. Marker keeps these off Mac dev, where `import gi` is
    # guarded and the backend falls back to cv2. PyGObject is capped <3.50:
    # 3.50+ needs girepository-2.0 (GLib 2.80+), absent on Ubuntu Jammy, so it
    # fails to build at firstboot. Needs apt: libgirepository1.0-dev,
    # libcairo2-dev, gir1.2-glib-2.0 (installed by sorteros chroot_apt.sh).
    "pygobject>=3.48,<3.50; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "pycairo>=1.29; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "readchar>=4.2.1",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "rknn-toolkit-lite2>=2.3.2",
    "supervision>=0.27.0.post2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
    "zeroconf>=0.148.0",
]

[tool.pyright]
reportMissingImports = "none"
reportMissingModuleSource = "none"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# On Linux aarch64 (Orange Pi etc.), the default PyPI torch wheel pulls in NVIDIA CUDA
# wheels whose aarch64 builds have invalid metadata, so uv sync fails. Route torch and
# torchvision through PyTorch's CPU-only index for that platform instead. Other
# platforms (macOS, Linux x86_64) still resolve from PyPI as before.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_machine == 'aarch64' and sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_machine == 'aarch64' and sys_platform == 'linux'" }]
